--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 
   <meta charset="UTF-8">
 
-  <title>HTML5 Canvas粒子效果文字动画特效DEMO演示</title>
+  <title>XXX生日快乐</title>
 
   <link rel="stylesheet" href="css/normalize.css">
 
   <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
